# FAGA

./: CONTRIBUTING.md  Cargo.toml  LICENSE  readme.md
assets/css/: default.css
core/: Cargo.toml
core/src/: lib.rs
css/: Cargo.toml
css/src/: lib.rs
html/: Cargo.toml
html/src/: lib.rs
layout/: Cargo.toml
layout/src/: lib.rs
net/: Cargo.toml
net/src/: lib.rs
paint/: Cargo.toml
paint/src/: lib.rs
src/: main.rs
src/network/: http_client.rs  mod.rs  request.rs  response.rs
src/parser/: css_parser.rs  dom.rs  html_parser.rs  mod.rs  renderer.rs
