[package]
name = "Faga"
version = "0.1.0"
edition = "2024"
authors = ["Infuseting"]
license = "MIT"

[dependencies]
env_logger = "0.10"
log = "0.4"

[workspace]
resolver = "2"
members = [
    ".",
]

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
